EXTRA_DIST = SConscript

noinst_LIBRARIES = libofstd.a

libofstd_a_SOURCES = ofcmdln.cc \
ofconapp.cc \
ofcond.cc \
ofconfig.cc \
ofconsol.cc \
ofcrc32.cc \
ofdate.cc \
ofdatime.cc \
offname.cc \
oflist.cc \
oflogfil.cc \
ofstd.cc \
ofstring.cc \
ofthread.cc \
oftime.cc

libofstd_a_LIBADD = 

# set the include path found by configure
INCLUDES= $(all_includes)

