EXTRA_DIST = cmdlnarg.h \
dcbytstr.h \
dcchrstr.h \
dccodec.h \
dcdatset.h \
dcddirif.h \
dcdebug.h \
dcdefine.h \
dcdeftag.h \
dcdicdir.h \
dcdicent.h \
dcdict.h \
dcdirrec.h \
dcelem.h \
dcerror.h \
dcfilefo.h \
dchashdi.h \
dcistrma.h \
dcistrmb.h \
dcistrmf.h \
dcistrmz.h \
dcitem.h \
dclist.h \
dcmetinf.h \
dcobject.h \
dcofsetl.h \
dcostrma.h \
dcostrmb.h \
dcostrmf.h \
dcostrmz.h \
dcovlay.h \
dcpcache.h \
dcpixel.h \
dcpixseq.h \
dcpxitem.h \
dcrleccd.h \
dcrlecce.h \
dcrlecp.h \
dcrledec.h \
dcrledrg.h \
dcrleenc.h \
dcrleerg.h \
dcrlerp.h \
dcsequen.h \
dcstack.h \
dcswap.h \
dctag.h \
dctagkey.h \
dctk.h \
dctypes.h \
dcuid.h \
dcvm.h \
dcvrae.h \
dcvras.h \
dcvrat.h \
dcvrcs.h \
dcvrda.h \
dcvrds.h \
dcvrdt.h \
dcvrfd.h \
dcvrfl.h \
dcvr.h \
dcvris.h \
dcvrlo.h \
dcvrlt.h \
dcvrobow.h \
dcvrof.h \
dcvrpn.h \
dcvrpobw.h \
dcvrsh.h \
dcvrsl.h \
dcvrss.h \
dcvrst.h \
dcvrtm.h \
dcvrui.h \
dcvrul.h \
dcvrulup.h \
dcvrus.h \
dcvrut.h \
dcxfer.h 


