EXTRA_DIST = ofalgo.h \
ofbmanip.h \
ofcast.h \
ofcmdln.h \
ofconapp.h \
ofcond.h \
ofconfig.h \
ofconsol.h \
ofcrc32.h \
ofdate.h \
ofdatime.h \
offname.h \
ofglobal.h \
oflist.h \
oflogfil.h \
ofoset.h \
ofset.h \
ofsetit.h \
ofstack.h \
ofstd.h \
ofstdinc.h \
ofstream.h \
ofstring.h \
ofthread.h \
oftime.h \
oftimer.h \
oftypes.h \
ofuoset.h
